--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+
+lib_deps = 
+	adafruit/DHT sensor library@^1.4.6
+	adafruit/Adafruit Unified Sensor@^1.1.14
